tests/pass/files/proj6_man_pass_multi-dim-array.c
int main () {
    int a[2][3];
    int b[3][2];
    int c[2][2];
}