tests/semantic_errors/files/proj_5_double_declare.c
int main(){
}

int fib(int a) {
}

int fib(int a) {
}